# AI-Agent-Orchestration-HW4

./: .env-example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
MATERIALS/: L07-Lesson-Summary_Summary.md  PART-B-ארכיטקטורות_ידע_מבוססות_גרפים_וניהול_הקשר_במודלי_שפה_גדולים_Summary.md  PART-C-כיצד_קוראים,_מפרשים_ומסיקים_מתוך_גרף_של_Graphify_Summary.md  Part-A-Active_Knowledge_Architecture_Summary.md  ex04-gaphify-obcidian-Reverse-engineering_Summary.md  ex04-gaphify-obcidian-Reverse-engineering_extracted.txt
artifacts/: buggy-python-GRAPH_REPORT.md  buggy-python-graph.json
config/: eval_tasks.json  logging_config.json  questions.json  rate_limits.json  setup.json
data/: README.md
deliverables/: ALIGNMENT_AUDIT.md  ARCHITECTURE.md  BUG_REPORT.md  BUG_REPORT_httpie.md  CLASS_SCHEMA.md  CLASS_SCHEMA_requests.md  EXTENSIONS.md  REVIEW_CHECKLIST.md  buggy-python-fix.patch
docs/: COMPLIANCE_TABLE5.md  GLOSSARY.md  PLAN.md  PRD.md  PRD_agent_orchestration.md  PRD_api_gatekeeper.md  PRD_graph_pipeline.md  PRD_improvement_loop.md  PRD_token_metrics.md  PROMPT_BOOK.md  README_OUTLINE.md  REPO_SELECTION.md  RETRO.md  SUBMISSION_CHECKLIST.md  TODO.md  UX_HEURISTICS.md  VERSIONING.md
metrics/: knowledge_assisted.json  knowledge_baseline.json
notebooks/: archlens_analysis.ipynb
obsidian/: architecture.md  findings.md  hot.md  index.md  localization.md  repair.md  suspects.md  tests.md
reports/: RESEARCH_QUESTIONS.md  mutation_spotchecks.md  test_report.md
scripts/: build_notebook.py  build_token_metrics.py  check_coverage_targets.py  check_forbidden_tools.py  check_line_cap.py  compare_debug_tokens.py  compare_graph_vs_code.py  gen_charts.py  gen_httpie_oop.py  gen_requests_oop.py  gen_screenshots.py  gen_test_report.py  repro_httpie_bug.py  run_knowledge_eval.py  run_sensitivity.py  run_token_metrics.py  token_study_httpie_live.py  token_study_tiktoken.py  visualize_graph.py
skills/: SKILL_graph_reading.md  SKILL_refactor.md
src/: main.py
tests/: _orch_sdk.py  conftest.py  test_accounting.py  test_agents_state.py  test_amortization.py  test_analyst_agent_node.py  test_anthropic_client.py  test_api_call_routing.py  test_apply_fix.py  test_approval_interrupt.py  test_artifacts.py  test_ask_llm.py  test_assisted_retriever.py  test_assisted_runner.py  test_baseline_context.py  test_baseline_runner.py  test_budget_alerts.py  test_bughunter_agent_node.py  test_call_log.py  test_chart_factory.py  test_charts.py  test_check_forbidden_tools.py  test_check_line_cap.py  test_checkpointing.py  test_cli.py  test_cli_usability.py  (+157 more)
(+1426 files in other folders)
